--- a/gb/20/9/3/n12377400.md
+++ b/gb/20/9/3/n12377400.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/akypvc391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/akypvc391/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/akypvc391/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/akypvc391/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/akypvc391/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/akypvc391/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/akypvc391/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/akypvc391/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>豆菓塔试吃 品尝身障勇宝贝亲手制作的豆菓塔</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/09/9a1ee13943e7be5190d1c360694061dc-600x400.jpg" />
 <h6>品尝身障勇宝贝亲手制作的豆菓塔。（桃园宝贝潜能发展中心提供）
 </h6>
 <hr>
-<p>【大纪元2020年09月03日讯】（大纪元记者徐乃义台湾桃园报导）梦想起飞工作坊的<ahref="https://github.com/akypvc391/djy/blob/master/gb/tag/%E8%BA%AB%E9%9A%9C.md#1">身障</a>勇宝贝学习制作豆菓塔，他们首次制作西点，将饱含营养与心意的豆菓塔献给家人欢度佳节。工作坊于2020年9月3日早上10点首次举办成果发表会，并邀请桃园市政府<ahref="https://github.com/akypvc391/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E5%B1%80.md#1">社会局</a>以及龟山区议员与里长一同品尝身障勇宝贝亲手制作的豆菓塔。</p>
-<figure id="attachment_12377404" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/e658dfe1b1b65d02f634144e2499db68.jpg"><img class="wp-image-12377404 size-large" src="https://i.epochtimes.com/assets/uploads/2020/09/e658dfe1b1b65d02f634144e2499db68-600x345.jpg" alt="" width="600" b="345" /></a><figcaption class="wp-caption-text">品尝<ahref="https://github.com/akypvc391/djy/blob/master/gb/tag/%E8%BA%AB%E9%9A%9C.md#1">身障</a>勇宝贝亲手制作的豆菓塔。（桃园宝贝潜能发展中心提供）</figcaption></figure>
+<p>【大纪元2020年09月03日讯】（大纪元记者徐乃义台湾桃园报导）梦想起飞工作坊的<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BA%AB%E9%9A%9C.md#1">身障</a>勇宝贝学习制作豆菓塔，他们首次制作西点，将饱含营养与心意的豆菓塔献给家人欢度佳节。工作坊于2020年9月3日早上10点首次举办成果发表会，并邀请桃园市政府<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E4%BC%9A%E5%B1%80.md#1">社会局</a>以及龟山区议员与里长一同品尝身障勇宝贝亲手制作的豆菓塔。</p>
+<figure id="attachment_12377404" aria-describedby="caption-attachment-12377404" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/e658dfe1b1b65d02f634144e2499db68.jpg"><img class="wp-image-12377404 size-large" src="https://i.epochtimes.com/assets/uploads/2020/09/e658dfe1b1b65d02f634144e2499db68-600x345.jpg" alt="" width="600" b="345" /></a><figcaption id="caption-attachment-12377404" class="wp-caption-text">品尝<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E8%BA%AB%E9%9A%9C.md#1">身障</a>勇宝贝亲手制作的豆菓塔。（桃园宝贝潜能发展中心提供）</figcaption></figure>
 <p>桃园宝贝潜能发展中心于2019年9月成立宝贝梦想起飞工作坊为身心障碍成人提供职前训练。机构有12位身障勇宝贝，透过简单的代工、手工缝纫及简易烹饪，让这群长大的“勇宝贝”除了“勇敢”并能够成为社会上有“用”的人，让他们能够融入社会，展现自我价值。</p>
-<figure id="attachment_12377403" style="width: 600px" class="wp-caption aligncenter"><ahref="https://i.epochtimes.com/assets/uploads/2020/09/c1e990b6587dd9b6b5f374bf12d4fba2.jpg"><img class="wp-image-12377403 size-large" src="https://i.epochtimes.com/assets/uploads/2020/09/c1e990b6587dd9b6b5f374bf12d4fba2-600x271.jpg" alt="" width="600" b="271" /></a><figcaption class="wp-caption-text">品尝身障勇宝贝亲手制作的豆菓塔。（桃园宝贝潜能发展中心提供）</figcaption></figure>
+<figure id="attachment_12377403" aria-describedby="caption-attachment-12377403" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2020/09/c1e990b6587dd9b6b5f374bf12d4fba2.jpg"><img class="wp-image-12377403 size-large" src="https://i.epochtimes.com/assets/uploads/2020/09/c1e990b6587dd9b6b5f374bf12d4fba2-600x271.jpg" alt="" width="600" b="271" /></a><figcaption id="caption-attachment-12377403" class="wp-caption-text">品尝身障勇宝贝亲手制作的豆菓塔。（桃园宝贝潜能发展中心提供）</figcaption></figure>
 <p>平日身障勇宝贝们透过简易代工、包装豆助茶贩售赚取奖励金，中秋前夕，教保老师开始教工作坊的勇宝贝们制作“豆菓塔”，但由于勇宝贝们的手部肌肉能力较弱，再加上是第一次尝试，目前一周的产量只有45盒，限量发售非常珍贵。小凯，平时相当安静，不会主动与人互动。刚开始学习制作时，连内馅都无法顺利填入塔皮，经由无数次练习后，小凯的专注力与手部精细动作的准确度有大幅提升，还会充当教保老师的小帮手主动教导同学。</p>
 <p>宝贝潜能发展中心主任陈美谷表示，梦想起飞工作坊今年尝试制作豆菓塔是一大突破，这群身障勇宝贝，透过自己努力展现他们的可能性，料多味美的豆菓塔适合平常吃，也适合送礼。每一盒豆菓塔都是身障勇宝贝努力的成果，也包含着勇宝贝想回馈给社会的爱与祝福，欢迎大家来品尝。◇</p>
 <p>责任编辑：唐音</p>
@@ -18,48 +18,47 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/19/12/1/n11692711.md#1">国际身心障碍者日 营造多元包容幸福共好城市</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/7/26/n12284882.md#1">慢飞天使搭公车下错站失踪2天 年迈双亲急协寻</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/10/n12320488.md#1">反毒反霸凌 同济会护儿权22日登场</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/13/n12327846.md#1">中横通车60年 12身障挑战健走31公里</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/28/n12363743.md#1">整合资源助弱势  中市第16家食物银行联盟店揭牌</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/28/n12363989.md#1">秋节产品促销  张丽善吁民众多支持身障朋友</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/3/n12377257.md#1">警民合作拦阻受骗15万元假投资真诈骗</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/3/n12377224.md#1">中秋连假“公益专区”推逾10款爱心月饼礼盒</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/3/n12377176.md#1">桃园议员定时定点垃圾专区  国光电厂空污范围</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/2/n12374782.md#1">茶改场推茶园生产管理APP 提升茶园智慧化管理</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/12/1/n11692711.md#1">国际身心障碍者日 营造多元包容幸福共好城市</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/7/26/n12284882.md#1">慢飞天使搭公车下错站失踪2天 年迈双亲急协寻</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/10/n12320488.md#1">反毒反霸凌 同济会护儿权22日登场</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/13/n12327846.md#1">中横通车60年 12身障挑战健走31公里</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/28/n12363743.md#1">整合资源助弱势  中市第16家食物银行联盟店揭牌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/8/28/n12363989.md#1">秋节产品促销  张丽善吁民众多支持身障朋友</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680757.md#1">全台最大彩色海芋花海 与你芋见爱神</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680775.md#1">争取最佳好青年 身障青年比赞“我好棒！”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680378.md#1">2022桃捷挺桃猿  与Rakuten Girls一起“捷乘应猿”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13680297.md#1">桃园老翁遭骗入会员 操作ATM遇警保老本</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/1/n10752825.md#1" target="_blank">共产暴政录：张国焘鄂豫皖根据地肃反</a></li><li><a href="https://github.com/akypvc391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/13/1/28/n3787603.md#1" target="_blank">钟延：从610副主任难逃610魔咒说起</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/24/n10997952.md#1" target="_blank">女儿获9万澳元奖学金 澳洲母女感恩法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/23/n12352151.md#1">清朝官场惊魂奇闻 原是前世埋下祸根</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/28/n12363346.md#1">拯救垂死的鱼 一群猪因善行成为网红</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/29/n12366370.md#1">【薇羽看世间】FBI解密：来自金星的科学家</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/31/n12368878.md#1">妈妈昏倒 5岁儿打“玩具救护车”上号码救母</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/10/n12318960.md#1">【命理】什么时候能找到男朋友？</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/3/n12376880.md#1">【拍案惊奇】中印坦克大炮对阵 北京惹恼蒙古国</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/2/n12376245.md#1">【时事纵横】王毅出丑 蓬佩奥：将大动作反共</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/26/n12358574.md#1">【欺世大观】唐山1976年大地震死多少人？</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/1/n12372846.md#1">捷克市长致信王毅：你是无理的粗鲁小丑</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/1/n12373757.md#1">中共呛声发起台海战争 美军机疑降台湾</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/1/n12372566.md#1">中印边境冲突地区 印度军官被步兵战车压死</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/1/n12373697.md#1">二亿元飞机半价也卖不出 赵本山遭女儿吐槽</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/31/n12371304.md#1">7天内2起官司 范冰冰借工作室感叹人情冷暖</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/31/n12369774.md#1">140公斤日本网红年减体重一半 胖男变帅哥</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/3/n12376709.md#1">巨石强森惊爆确诊中共肺炎 全家都中镖</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/1/n12373556.md#1">曾遭设局嫖娼封杀六年 黄海波参加聚会疑复出</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/1/n12372441.md#1">俄公布“沙皇炸弹”测试画面 史上最强核爆</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/31/n12369774.md#1">140公斤日本网红年减体重一半 胖男变帅哥</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/9/2/n12374745.md#1">流浪狗被涂画成老虎 马国动保团体悬赏缉凶</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/31/n12369943.md#1">短片：俄Su-27战机危险拦截美B-52轰炸机</a></li>
-<li><a href="https://github.com/akypvc391/djy/blob/master/gb/20/8/31/n12370955.md#1">伸展让身体柔软 有3大好处 1动作消除脖子僵硬</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/29/n13679895.md#1">梁锦祥：故宫大门倒等异象频现 人类应反思</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678880.md#1">【新闻大家谈】防疫手段失控 中共危机加剧</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676987.md#1">威尔?史密斯上台搧颁奖人 杜汶泽一假设引共鸣</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/19/n13657423.md#1">吃对了肌肤就漂亮 10大食材为肌肤打底</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/akypvc391/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/akypvc391/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/3/n12377400.htm">豆菓塔试吃 品尝身障勇宝贝亲手制作的豆菓塔</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/9/3/n12377400.htm">豆菓塔试吃 品尝身障勇宝贝亲手制作的豆菓塔</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://www.szzd.org/v.php?action=qrcode&url=https://github.com/akypvc391/djy/blob/master/gb/20/9/3/n12377400.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/akypvc391/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/akypvc391/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/akypvc391/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/akypvc391/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/akypvc391/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/9/3/n12377400.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
